--- a/workspace/Dockerfile
+++ b/workspace/Dockerfile
@@ -664,6 +664,7 @@ ARG INSTALL_NPM_BOWER=false
 ARG INSTALL_NPM_VUE_CLI=false
 ARG INSTALL_NPM_ANGULAR_CLI=false
 ARG INSTALL_NPM_ADONIS_CLI=false
+ARG INSTALL_NPM_NEST_CLI=false
 ARG NPM_REGISTRY
 ENV NPM_REGISTRY ${NPM_REGISTRY}
 ENV NVM_DIR /home/laradock/.nvm
@@ -695,6 +696,9 @@ RUN if [ ${INSTALL_NODE} = true ]; then \
         ;fi \
         && if [ ${INSTALL_NPM_ADONIS_CLI} = true ]; then \
         npm install -g @adonisjs/cli \
+        ;fi \
+        && if [ ${INSTALL_NPM_NEST_CLI} = true ]; then \
+        npm install -g @nestjs/cli \
         ;fi \
         && ln -s `npm bin --global` /home/laradock/.node-bin \
 ;fi
